--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Ryan's page!</title>
+</head>
+
+<body>
+    <h1> This is a header yo </h1>
+    Hollo world
+    <img src='/home/ryan/Downloads/IMG_20170718_171427.jpg'></img>
+</html>
