--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
 
 <body>
     <h1> This is a header yo </h1>
-    Hollo world
-    <img src='/home/ryan/Downloads/IMG_20170718_171427.jpg'></img>
+    Hello world
 </html>
