--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 
 <body>
     <h1> This is a header yo </h1>
+    <h2> This is another header </h1>
     Hello world
+    <br>
+    <a href="http://google.com">This is a link to google</a>
+    <img style="width:1500px" src='./IMG_20170718_171427.jpg'>
+    <text style="size: 20px; color: blue;">this is blue</text>
+    <!-- this is a comment -->
 </html>
