--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Ryan's page!</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Ryan Lehmkuhl</title>
 
-<body>
-    <h1> This is a header yo </h1>
-    <h2> This is another header </h1>
-    Hello world
-    <br>
-    <a href="http://google.com">This is a link to google</a>
-    <img style="width:1500px" src='./IMG_20170718_171427.jpg'>
-    <text style="size: 20px; color: blue;">this is blue</text>
-    <!-- this is a comment -->
+    <link rel="stylesheet" type="text/css" href="css/base.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+
+
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600" rel="stylesheet" type="text/css"/>
+
+  </head>
+  <body>
+    <div id="maintext">
+        <span style="display:table-cell; vertical-align: middle;">
+		<h1>Hello World</h1>
+        Hi! I'm currently a freshamn studying Computer Science and Applied
+        Mathematics at US Berkeley as a Regent's and Chancellor's scholar!
+        <div id="footer">
+
+        </div>
+    </div>
+
+
+  </body>
 </html>
