--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <div id="maintext">
         <span style="display:table-cell; vertical-align: middle;">
-		<h1>Hello World</h1>
-        Hi! I'm currently a freshamn studying Computer Science and Applied
+		<h1>nc -lp 8080 &;echo "Hello World"|nc 127.0.0.1 8080</h1>
+        Hi! I'm currently a freshman studying Computer Science and Applied
         Mathematics at US Berkeley as a Regent's and Chancellor's scholar!
         <div id="footer">
 
