--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <title>Ryan Lehmkuhl</title>
 
     <link rel="stylesheet" type="text/css" href="css/base.css" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
 
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto"
+          rel="css/base.css">
 
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600" rel="stylesheet" type="text/css"/>
 
   </head>
   <body>
+<div id="sidebar" class="sidenav">
+  <h1>Ryan Lehmkuhl</h1>
+  <a href="index.html">Home</a>
+  <a href="about_me.html">About Me</a>
+  <a href="resume.pdf">Resume</a>
+</div>
+
+
     <div id="maintext">
         <span style="display:table-cell; vertical-align: middle;">
-		<h1>nc -lp 8080 &;echo "Hello World"|nc 127.0.0.1 8080</h1>
         Hi! I'm currently a freshman studying Computer Science and Applied
         Mathematics at US Berkeley as a Regent's and Chancellor's scholar!
         <div id="footer">
