--- a/about_me.html
+++ b/about_me.html
@@ -29,8 +29,8 @@
         and enjoying a delicious cortado.
         <br>
         <br>
-        While I've had many embarassing moments in my life (such as forgetting
-        my highschool graduation speech) her are some accomplishments I'm most proud
+        While I've had many regrettable moments in my life (such as forgetting
+        my highschool graduation speech) here are some accomplishments I'm most proud
         of: solving a Rubik's cube in 20 seconds, playing bass with an
         all-black Gospel family band, looking into the eyes of an actual Kiwi
         bird, and singing a solo in the Sydney Opera House.
