--- a/index.html
+++ b/index.html
@@ -9,26 +9,46 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto"
           rel="css/base.css">
 
-
+    <script src="js/toggle.js"></script>
   </head>
   <body>
-<div id="sidebar" class="sidenav">
-  <h1>Ryan Lehmkuhl</h1>
-  <a href="index.html">Home</a>
-  <a href="about_me.html">About Me</a>
-  <a href="resume.pdf">Resume</a>
-</div>
-
-
-    <div id="maintext">
-        <span style="display:table-cell; vertical-align: middle;">
-        Hi! I'm currently a freshman studying Computer Science and Applied
-        Mathematics at US Berkeley as a Regent's and Chancellor's scholar!
-        <div id="footer">
-
-        </div>
+    <div id="sidebar" class="sidenav">
+        <h1>Ryan Lehmkuhl</h1>
+        <a onclick="SlideMainbarIn()">Home</a>
+        <a onclick="SlideMainbarOut()">About Me</a>
+        <a href="resume.pdf">Resume</a>
     </div>
 
+    <div id="mainbar">
+        <div id="maintext">
+            Hi! I'm currently a freshman studying Computer Science and Applied
+            Mathematics at US Berkeley as a Regent's and Chancellor's scholar!
+        </div>
+
+	    <div id="about_me">
+            I encompass many forms of nerdiness whether they be in math, CS, or music. I
+            have many <b>sets</b> of random interests that <b>span</b> many <b>spaces</b>
+            (see what I did there).  In particular, I abolsutely love
+            playing pickup bball/vball, anything tech/math related, reading
+            voraciously, having those deep philosophical discussions with friends,
+            and enjoying a delicious cortado.
+            <br>
+            <br>
+            While I've had many regrettable moments in my life (such as forgetting
+            my highschool graduation speech) here are some accomplishments I'm most proud
+            of: solving a Rubik's cube in 20 seconds, playing bass with an
+            all-black Gospel family band, looking into the eyes of an actual Kiwi
+            bird, and singing a solo in the Sydney Opera House.
+            <br>
+            <br>
+            I was gonna put some sort of cute picture here but instead enjoy a
+            video of me hacking some government stuff
+            <br>
+            <br>
+            <iframe width="560" height="315"
+             src="https://www.youtube.com/embed/oWOl-T2NxGo"  allowfullscreen></iframe>
+        </div>
+     </div>
 
   </body>
 </html>
