--- a/veronica/help_for_the_technically_challenged.html
+++ b/veronica/help_for_the_technically_challenged.html
@@ -55,7 +55,7 @@
     very platonic" but then this ended up being way longer and more romantic
     then intended LOL (well romantic in my mind at least because honestly if a girl were to make a webpage
     and encrypt a file for me I'd be buying the ring already just sayin) so
-    apologies PAL but I do hope you enjoy :)
+    apologies PAL *cough* but I do hope you enjoy :)
     </p>
   </body>
 </html>
