--- a/veronica/help_for_the_technically_challenged.html
+++ b/veronica/help_for_the_technically_challenged.html
@@ -21,11 +21,11 @@
 		<li>Download the program + ciphertext by visiting
             <a href="https://ryanleh.github.io/veronica/bday_stuff.zip"> here</a> if you haven't already
         </li>
-        <li>Unzip the files to your Desktop</li>
+        <li>Unzip the folder to your Desktop</li>
 		<li>Open up Terminal (Just search for it)</li>
-        <li>Type "cd ~/Desktop" into Terminal --> cd stands for "change directory" and the
+        <li>Type "cd ~/Desktop/bday_stuff" into Terminal --> cd stands for "change directory" and the
             tilda is your home directory.  So basically you're telling the terminal to
-            navigate to the Desktop.</li>
+            navigate to the Desktop/bday_stuff.</li>
         <li>Type "ls" --> ls stands for "list segments" and it lists all the files in
             your current directory.  Somewhere in the listing should be two
             files: 'scrypto' and 'ITSYOBDAY.enc'
