--- a/veronica/help_for_the_technically_challenged.html
+++ b/veronica/help_for_the_technically_challenged.html
@@ -43,7 +43,7 @@
             scrypto in decrypt mode on the file ITSYOBDAY.enc.  If everything
             works correctly you should see "File: ITSYOBDAY.enc decrypted!"</li>
         <li>Type "ls" --> There should be a new file called 'ITSYOBDAY.txt'</li>
-        <li>Type "cat ITSYOBDAY.txt" --> print your bday letter!</li>
+        <li>Type "cat ITSYOBDAY.txt" --> print your bday letter! Or you can just navigate to the folder in Finder and open it in Word or something</li>
 	<ul>
     <p>
     <br>
