--- a/contact/index.html
+++ b/contact/index.html
@@ -30,12 +30,12 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-        <a href="../index.html">
+        <a href="../">
             <img src="../img/DecadenceLogo.png" style="width:20%"></img>
         </a>
             <ul class="navbar-nav text-uppercase ml-auto">
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="../index.html">Home</a>
+                <a class="nav-link js-scroll-trigger" href="../">Home</a>
               </li>
             </ul>
         </div>
@@ -62,7 +62,7 @@
               time, location, requested attire, and event information.
               <br><br>
               If you have special requests for songs, please look at our current
-              <a href="../repertoire/index.html">repertoire</a> and
+              <a href="../repertoire/">repertoire</a> and
               indicate which songs you would like to hear. Many of our songs
               require certain members to be present, so we appreciate your
               understanding if we cannot fulfill a request! We will always work
