--- a/repertoire/index.html
+++ b/repertoire/index.html
@@ -29,12 +29,12 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a href="../index.html">
+        <a href="../">
           <img src="../img/DecadenceLogo.png" style="width:20%"></img>
         </a>
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="../index.html">Home</a>
+            <a class="nav-link js-scroll-trigger" href="../">Home</a>
           </li>
         </ul>
       </div>
