temp decadence website

--- a/audition/index.html
+++ b/audition/index.html
@@ -32,11 +32,7 @@
 	<a href="../">
           <img src="../img/DecadenceLogo.png" style="width:20%"></img>
 	</a>
-          <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="../">Home</a>
-            </li>
-          </ul>
+
       </div>
     </nav>
 
@@ -52,7 +48,7 @@
             <h2 class="section-heading text-uppercase">Come Audition For Us!</h2>
           </div>
           <div class="col-lg-12">
-            <h3 class="text-uppercase">Being in DeCadence</h3>
+            <h3 class="text-uppercase" style="padding-bottom:15px">Being in DeCadence</h3>
           </div>
           <p style="display:inline-block;width:100%;">
             The most important thing you need to know about being in DeCadence
@@ -67,8 +63,8 @@
             of rehearsal, and really putting forth your best efforts as a musician and as a
             fellow singer.
             <br><br>
-            Some events we always do are the Berkeley Welcome Back Concert,
-            West Coast A Cappella, and our own personal end-of-semester concert.
+            Some events we always do include the UC Berkeley Welcome Back Showcase,
+            West Coast A Cappella Showcase, and our own personal end-of-semester concert.
             We also have often attended the California A Cappella Festival at UCLA,
             and sometimes compete at ICCAs (International Championship of Collegiate
             A Cappella).
@@ -82,71 +78,102 @@
             work with accommodations. No matter your schedule, we highly
             encourage you to come out and audition.
           </p>
-          <div class="col-lg-12" style="margin-top:10vh;">
+          <div class="col-lg-12" style="margin-top:10vh;padding-bottom:15px">
             <h3 class="text-uppercase">FAQ</h3>
           </div>
-          <p style="display:inline-block;width:100%;">
-            <b>When are you holding auditions?</b>
-            <br>Auditions will be held on Sunday, August 26th through
-            Saturday, September 1st, with callbacks on Saturday, September 2nd.
-            <br><br>
-            <b>How do I schedule an audition?</b>
-            <br>Stay tuned for a sign-up sheet for Fall 2018 auditions!
-            <br><br>
-            <b>What type of experience do I need?</b>
-            <br>While the experience of our members varies, we look for our singers to
-            have good intonation/pitch, be able to learn a part relatively
-            quickly, and be able to carry a part in a group of other people
-            singing different parts. We also greatly appreciate the ability to listen
-            to musical feedback and adjust your performance accordingly. For those
-            new to reading music, we highly recommend taking Music 20A to help you learn
-            the basics. Also, if you’re interested in arranging music or vocal percussion, that’s a big plus!
-            <br><br>
-            <b>What do I need to bring to the audition?</b>
-            <br>Please fill out an <a href="../img/audition_form.pdf" target = "_blank">audition
-            form</a> and prepare a 1-2 minute solo (a verse and a chorus would be
-            great!) that you feel shows off your voice well!
-            <br><br>
-            <b>Wait, I have to prepare a solo?!</b>
-            <br>Yes, but don’t worry! It doesn’t need to have mad Beyonce runs,
-            nor does it need to hit the absolute lowest/highest
-            note you can go. Just pick something that best showcases your voice
-            and go with it! It would be helpful to choose a song in a
-            comfortable range for your voice that has some dynamic contrast (soft/loud) and
-            doesn’t have too much empty space between lyrics.
-            <br><br>
-            <b>What kind of time commitment is involved?</b>
-            <br>As a member of DeCadence, you will be expected to attend rehearsal
-            from 7:30pm-10:00pm on Mondays and Wednesdays, a 1-hour weekly sectional
-            (timing decided by the section members) and our weekly Sproul performance
-            on Wednesdays from 11:00-12:30pm (Sproul attendence is more flexible). In
-            addition to this, we often have small performances throughout the year and a big
-            concert at the end of each semester. Most of our members stay for at least
-            a year, and we also hope that auditionees will consider committing
-            at least a year in the group.
-            <br><br>
-            <b>How competitive are auditions?</b>
-            <br>Each audition season, there can be anywhere between dozens to over a hundred
-            auditionees. Fortunately, DeCadence does not have any sort of quota
-            on group size for any given semester (the group has been between 10-18
-            members historically). Many of our members actually did not get
-            into the group on their first or even second audition. That’s why
-            we strongly encourage singers who don’t get in to take some music classes
-            and/or audition for other groups to build experience, then come back
-            and audition again!
-            <br><br>
-            <b>Can I audition for other groups at the same time?</b>
-            <br>Absolutely! Since the beginning of each semester is new and
-            exciting, we understand the importance for students to explore new
-            clubs and activities. It is totally acceptable to audition for other
-            groups, and some might be a better fit than others. By doing so,
-            you’ll gain valuable audition experience in addition to learning more
-            about our great a cappella community at Cal. Whether it be for DeCadence or
-            others, we want you to find the perfect fit for your a cappella
-            interests (but we really hope it’s us!)!
-          </p>
 
       </div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="row">
+          <table class="table table-striped" cellspacing="0" width="100%">
+            <thead>
+            </thead>
+            <tbody>
+              <tr>
+                <td><b>When are you holding auditions?</b></td>
+              </tr>
+              <tr>
+                <td>Our Fall 2018 auditions will be held on Sunday, August 26th through
+                Saturday, September 1st, with callbacks on Saturday, September 2nd.</td>
+              </tr>
+                <td><b>How do I schedule an audition?</b></td>
+              <tr>
+                <td>Stay tuned for a sign-up sheet for Fall 2018 auditions!</td>
+              </tr>
+                <td><b>What type of experience do I need?</b></td>
+              <tr>
+                <td>While the experience of our members varies, we look for our singers to
+                have good intonation/pitch, be able to learn a part relatively
+                quickly, and be able to carry a part in a group of other people
+                singing different parts. We also greatly appreciate the ability to listen
+                to musical feedback and adjust your performance accordingly. For those
+                new to reading music, we highly recommend taking Music 20A to help you learn
+                the basics. Also, if you’re interested in arranging music or vocal percussion, that’s a big plus!
+              </td>
+              </tr>
+              <tr>
+                <td><b>What do I need to bring to the audition?</b></td>
+              </tr>
+              <tr>
+                <td>Please fill out an <a href="../img/audition_form.pdf" target = "_blank">audition
+                  form</a> and prepare a 1-2 minute solo (a verse and a chorus would be
+                  great!) that you feel shows off your voice well!</td>
+              </tr>
+              <tr>
+                <td><b>Wait, I have to prepare a solo?!</b></td>
+              </tr>
+              <tr>
+                <td>Yes, but don’t worry! It doesn’t need to have mad Beyonce runs,
+                  nor does it need to hit the absolute lowest/highest
+                  note you can go. Just pick something that best showcases your voice
+                  and go with it! It would be helpful to choose a song in a
+                  comfortable range for your voice that has some dynamic contrast (soft/loud) and
+                  doesn’t have too much empty space between lyrics.</td>
+              </tr>
+              <tr>
+                <td><b>What kind of time commitment is involved?</b></td>
+              </tr>
+              <tr>
+                <td>As a member of DeCadence, you will be expected to attend rehearsal
+                from 7:30pm-10:00pm on Mondays and Wednesdays, a 1-hour weekly sectional
+                (timing decided by the section members) and our weekly Sproul performance
+                on Wednesdays from 11:00-12:30pm (Sproul attendence is more flexible). In
+                addition to this, we often have small performances throughout the year and a big
+                concert at the end of each semester. Most of our members stay for at least
+                a year, and we also hope that auditionees will consider committing
+                at least a year in the group.</td>
+              </tr>
+              <tr>
+                <td><b>How competitive are auditions?</b></td>
+              </tr>
+              <tr>
+                <td>Each audition season, there can be anywhere between dozens to over a hundred
+                auditionees. Fortunately, DeCadence does not have any sort of quota
+                on group size for any given semester (the group has been between 10-18
+                members historically). Many of our members actually did not get
+                into the group on their first or even second audition. That’s why
+                we strongly encourage singers who don’t get in to take some music classes
+                and/or audition for other groups to build experience, then come back
+                and audition again!</td>
+              </tr>
+              <tr>
+                <td><b>Can I audition for other groups at the same time?</b></td>
+              </tr>
+              <tr>
+                <td>Absolutely! Since the beginning of each semester is new and
+                exciting, we understand the importance for students to explore new
+                clubs and activities. It is totally acceptable to audition for other
+                groups, and some might be a better fit than others. By doing so,
+                you’ll gain valuable audition experience in addition to learning more
+                about our great a cappella community at Cal. Whether it be for DeCadence or
+                others, we want you to find the perfect fit for your a cappella
+                interests (but we really hope it’s us!)!</td>
+              </tr>
+              <tr></tr>
+              <tr></tr>
+            </tbody>
+          </table>
+        </div>
     </section>
 
 <!-- Footer -->
