--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
   </head>
 
@@ -120,10 +120,10 @@
               <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/M-NhmnqWxRo" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="carousel-item">
-                <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/3jk19BHn8J4" frameborder="0" allowfullscreen></iframe>
+              <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/3jk19BHn8J4" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="carousel-item">
-                <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/9a9LWTcLri4" frameborder="0" allowfullscreen></iframe>
+              <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/9a9LWTcLri4" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
           <a class="carousel-control-prev" href="#videos-carousel" role="button" data-slide="prev">
@@ -135,7 +135,7 @@
               <span class="sr-only">Next</span>
           </a>
         </div>
-        <p><br>Find your favorite video at our <a href="https://www.youtube.com/user/DeCadenceAcappella" target = "_blank">YouTube channel</a>!</p>
+	    <p><br>Find your favorite video at our <a href="https://www.youtube.com/user/DeCadenceAcappella" target = "_blank">YouTube channel</a>!</p>
       </div>
     </section>
 
@@ -152,8 +152,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal1">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/jess.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/jess.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Jess Bonnar</h4>
@@ -163,8 +163,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal2">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/david.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/david.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>David Mai</h4>
@@ -174,8 +174,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal3">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/will.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/will.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Will Bassett</h4>
@@ -185,8 +185,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal4">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/julia.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/julia.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Julia Matthews</h4>
@@ -196,8 +196,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal5">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/jessica.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/jessica.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Jessica Wang</h4>
@@ -207,8 +207,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal6">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/aria.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/aria.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Aria Frangos</h4>
@@ -218,8 +218,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal7">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/erich.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/erich.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Erich Rathkamp</h4>
@@ -229,8 +229,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal8">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/ryan.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/ryan.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Ryan Lehmkuhl</h4>
@@ -240,8 +240,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal9">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/brian.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/brian.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Brian Yin</h4>
@@ -251,8 +251,8 @@
           <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" data-toggle="modal" href="#memberModal10">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/derk.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/derk.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Derek Mark</h4>
@@ -262,8 +262,8 @@
         <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" href="audition/">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/new_member_3.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/new_member_3.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Audition</h4>
@@ -273,8 +273,8 @@
         <div class="col-md-4 col-sm-6 member-item">
             <a class="member-link" href="audition/">
               <div class="member-hover">
+                <img class="img-fluid" src="img/members/new_member_4.jpg" alt="">
               </div>
-              <img class="img-fluid" src="img/members/new_member_4.jpg" alt="">
             </a>
             <div class="member-caption">
               <h4>Audition</h4>
@@ -283,6 +283,10 @@
           </div>
         </div>
       </div>
+      <div class="col-lg-12 text-center">
+      <p class="text-muted center"> Click <a href="alumni/">here</a> to see our alumni. </p>
+      </div>
+
     </section>
 
 <!-- Footer -->
@@ -327,7 +331,7 @@
     </footer>
 
 
-    <!-- Member Modals -->
+    <!-- Portfolio Modals -->
     <!-- Modal 1 -->
     <div class="member-modal modal fade" id="memberModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
@@ -825,17 +829,22 @@
                   <li><b>Vocal Part: </b>Bass, Vocal Percussion</li>
                   <li><b>Audition Songs: </b>White Christmas (Bing Crosby)</li>
                   <li><b>Musical Experience: </b>6 years of vocal percussion performances, 9 years of bass trombone</li>
-                  <li><b>Music Interests: </b>Electornic (Louis Futon, Mura Masa, Sam Gellaitry, Flume, etc.)</li>
+                  <li><b>Music Interests: </b> Electronic (Louis Futon, Anomalie, Hanz, Mura Masa, etc.)</li>
                   <li><b>Favorite A Cappella Group Besides DeCadence: </b>I would say not Pentatonix because that's too mainstream,
                     but that's too mainstream so I'll say Pentatonix</li>
-                  <li><b>Hobbies: </b>Beatboxing, beating boxes, Pokemon, eating raw spinach, dying inside every day until the last
-                    remnants of my sanity wither way into nothingness, and running</li>
+                  <li><b>Hobbies: </b>reading books, reading literally anything else, beatboxing, beating boxes, eating boxes,
+                    eating spinach, dying inside every day until the last remnants of my sanity whither away into nothingness, and running</li>
                   <li><b>Solos: </b>Something Somewhere</li>
                   <li><b>Arrangements: </b>The Hills</li>
-                  <li><b>Bio: </b>I'm Derek, but you can just call me. Please. I'm so lonely. I have the ability to make grass grow
-                    at a relatively slow rate and I also actively contribute to global warming. I enjoy cracking jokes, backs, and under
-                    pressure. Three fun facts about me: my house number is 420, my initials spell DM, and there are only two fun facts.
-                    Finally, I used to run track in high school, but now I only run from responsibilities and homeless people. Go Bears.
+                  <li><b>Bio: </b> I’m Derek, but you can just call me. Please. I'm so lonely. I have the ability to make grass grow at
+                     a relatively slow rate and I also actively contribute to global warming. Anyone who knows me knows that they know me.
+                     In my spare time, I enjoy cracking jokes, backs, and under pressure. Another fun activity I enjoy is lying about reading
+                     books or literally anything else. I am illiterate. I’d like to consider myself a night person since I’m allergic to
+                     the sun and definitely not a vampire, but I always take naps at night so that's not been working out so well. Also,
+                     I’m not a vampire. I have a couple cool nicknames: Derk, dude, bro, that guy over there, that guy over there who just
+                     tripped, now he’s just groveling on the ground, somebody call an ambulance, amongst others. Three fun facts about me:
+                     my house number is 420, and I never passed first grade math. Finally, I used to run track in high school, but now I
+                     only run from responsibilities and squirrels. Go Bears.
                   </li>
                 </ul>
               </div>
@@ -850,7 +859,7 @@
 		<script src="js/bootstrap.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/agency.min.js"></script>
+    <script src="js/main.min.js"></script>
 
   </body>
 
