--- a/repertoire/index.html
+++ b/repertoire/index.html
@@ -32,11 +32,6 @@
         <a href="../">
           <img src="../img/DecadenceLogo.png" style="width:20%"></img>
         </a>
-        <ul class="navbar-nav text-uppercase ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="../">Home</a>
-          </li>
-        </ul>
       </div>
     </nav>
 
@@ -87,8 +82,8 @@
 								<td>-</td>
 							</tr>
 							<tr>
-								<th scope="row">Sir Duke*</th>
-								<td>Steview Wonder</td>
+								<th scope="row">Sir Duke</th>
+								<td>Stevie Wonder</td>
 								<td>Jessica Wang</td>
 							</tr>
 							<tr>
