--- a/contact/index.html
+++ b/contact/index.html
@@ -25,55 +25,132 @@
   </head>
 
   <body id="page-top">
-    <!-- Wrapper class is necessary so footer stays on bottom -->
-    <wrapper class="d-flex flex-column">
-      <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-        <div class="container">
-        <a href="../">
-            <img src="../img/DecadenceLogo.png" style="width:20%"></img>
-        </a>
-            <ul class="navbar-nav text-uppercase ml-auto">
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="../">Home</a>
-              </li>
-            </ul>
-        </div>
-      </nav>
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+	  <div class="container">
+	  <a href="../">
+	    <img src="../img/DecadenceLogo.png" style="width:20%"></img>
+	  </a>
+	  </div>
+	</nav>
 
-      <main class="container-fluid py-3 flex-fill">
-        <!-- Header -->
-        <header class="contact-masthead"></header>
-        <!-- Audition -->
-        <section id="contact">
-          <div class="container text-center" >
-            <div class="row">
-              <div class="col-lg-12">
-                <h2 class="section-heading text-uppercase">Contact Us!</h2>
-              </div>
-              <p style="display:inline-block;width:100%;">
-              If you have any questions regarding auditions or DeCadence in
-              general, feel free to ask!
-              <br>
-              You can contact us at
-              <a href="mailto:decadence.berkeley@gmail.com">decadence.berkeley@gmail.com.</a>
-              <br><br>
-              If you are interested in booking our group, please include: date,
-              time, location, requested attire, and event information.
-              <br><br>
-              If you have special requests for songs, please look at our current
-              <a href="../repertoire/">repertoire</a> and
-              indicate which songs you would like to hear. Many of our songs
-              require certain members to be present, so we appreciate your
-              understanding if we cannot fulfill a request! We will always work
-              to find a great replacement if this happens.
-              <br><br>
-              Thank you and as always, go bears!
-              </p>
-            </div>
+	<!-- Header -->
+	<header class="contact-masthead"></header>
+
+	<!-- Audition -->
+	<section id="contact">
+	  <div class="container text-center" >
+		<div class="row">
+		  <div class="col-lg-12">
+			<h2 class="section-heading text-uppercase">Contact Us!</h2>
+		  </div>
+		  <p style="display:inline-block;width:100%;">
+			If you have any questions regarding auditions or DeCadence in
+			general, feel free to ask!
+		  <br>
+			You can contact us at
+		  <a href="mailto:decadence.berkeley@gmail.com">decadence.berkeley@gmail.com.</a>
+		  <br><br>
+			If you are interested in booking our group, please include: date,
+			time, location, requested attire, and event information.
+		  <br><br>
+			If you have special requests for songs, please look at our current
+			repertoire below and indicate which songs you would like to hear.
+			Many of our songs require certain members to be present, so we
+			appreciate your understanding if we cannot fulfill a request! We
+			will always work to find a great replacement if this happens.
+		  <br><br>
+		  Thank you and as always, go bears!
+		  </p>
+		</div>
+	  </div>
+	</section>
+
+	<!-- Repertoire -->
+    <section class="bg-light" id="repertoire">
+      <div class="container text-center" >
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="section-heading text-uppercase">Current Repertoire</h2>
           </div>
-        </section>
-      </main>
+          <p style="display:inline-block;width:100%;">
+			Have any special requests for us? Here is our current repertoire for your perusal!
+			Please remember that this is dependent on the availability of certain members.
+			Also, some of our songs contain explicit lyrics -- if you are contacting us for a
+			performance, please indicate whether or not explicit lyrics are allowed. Thank you
+			for your understanding, and we hope you enjoy the music as much as we do.
+          <br><br>
+	      </p>
+        </div>
+      	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		  <div class="row">
+			<table class="table table-striped table-hover" cellspacing="0" width="100%">
+			  <thead>
+				<tr>
+				  <th scope="col">Song</th>
+				  <th scope="col">Original Artist</th>
+				  <th scope="col">Arranger(s)</th>
+				</tr>
+			  </thead>
+			  <tbody>
+				<tr>
+				  <th scope="row">Happy Birthday</th>
+				  <td>-</td>
+				  <td>-</td>
+				</tr>
+				<tr>
+				  <th scope="row">Kokomo (UC Berkeley Edition)</th>
+				  <td>The Beach Boys</td>
+				  <td>-</td>
+				</tr>
+				<tr>
+				  <th scope="row">In Da Club*</th>
+				  <td>50 Cent</td>
+				  <td>-</td>
+				</tr>
+				<tr>
+				  <th scope="row">Sir Duke*</th>
+				  <td>Steview Wonder</td>
+				  <td>Jessica Wang</td>
+				</tr>
+				<tr>
+				  <th scope="row">What You Don't Do</th>
+				  <td>Lianne La Havas</td>
+				  <td>Lizzie Arnett</td>
+				</tr>
+				<tr>
+				  <th scope="row">Sparkling Diamonds</th>
+				  <td>Moulin Rouge</td>
+				  <td>Mark Lee</td>
+				</tr>
+				<tr>
+				  <th scope="row">The One*</th>
+				  <td>The Chainsmokers</td>
+				  <td>Ryan Lehmkuhl</td>
+				</tr>
+				<tr>
+				  <th scope="row">The Hills*</th>
+				  <td>The Weeknd</td>
+				  <td>Derek Mark</td>
+				</tr>
+				<tr>
+				  <th scope="row">Queen of Peace</th>
+				  <td>Florence and the Machine</td>
+				  <td>David Mai</td>
+				</tr>
+				<tr>
+				  <th scope="row">The Night We Met</th>
+				  <td>Lord Huron</td>
+				  <td>Justin Hom</td>
+				</tr>
+			  </tbody>
+			</table>
+		  </div>
+		  <p class="text-center">* indicates some explicit lyrics</p>
+        </div>
+	  </div>
+    </section>
+
 
   <!-- Footer -->
       <footer class="container-fluid w-100 py-3 bg-light">
@@ -115,7 +192,6 @@
           </div>
         </div>
       </footer>
-    </wrapper>
 
     <!-- Bootstrap core JavaScript -->
     <script src="../jquery/jquery.slim.min.js"></script>
