--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <div class="container">
         <img src="img/DecadenceLogo.png" style="float: center; width:70%"></img>
         <div>
-          <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="audition/">Audition</a>
-          <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="contact/">Contact Us</a>
+          <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="audition/index.html">Audition</a>
+          <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="contact/index.html">Contact Us</a>
         </div>
       </div>
     </header>
@@ -78,7 +78,7 @@
             <h4 class="service-heading">Auditions</h4>
             <p class="text-muted"> Come audition for us this
               coming semester! Check out
-              our <a href="audition/">auditions
+              our <a href="audition/index.html">auditions
               page</a> for more info. For additional
               questions, contact our auditions coordinators Jess Bonnar
               and David Mai at jlbonnar@berkeley.edu and damai@berkeley.edu</p>
@@ -112,18 +112,26 @@
       </div>
       <div class="container text-center">
         <div id="videos-carousel" class="carousel slide" data-interval="false" data-ride="carousel">
-          <div class="carousel-inner">
+          <div class="carousel-inner" style = "display: block; margin: auto; width:75%">
             <div class="carousel-item active">
-              <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://www.youtube.com/embed/QbZ55qZLZwE?rel=0" frameborder="0" allowfullscreen></iframe>
+              <div class = "embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QbZ55qZLZwE?rel=0" allowfullscreen></iframe>
+            </div>
             </div>
             <div class="carousel-item">
-              <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/M-NhmnqWxRo" frameborder="0" allowfullscreen></iframe>
+              <div class = "embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M-NhmnqWxRo?rel=0" allowfullscreen></iframe>
+            </div>
             </div>
             <div class="carousel-item">
-              <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/3jk19BHn8J4" frameborder="0" allowfullscreen></iframe>
+              <div class = "embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3jk19BHn8J4?rel=0" allowfullscreen></iframe>
+            </div>
             </div>
             <div class="carousel-item">
-              <iframe style="display: block; margin: auto;" width="65%" height="370" src="https://youtube.com/embed/9a9LWTcLri4" frameborder="0" allowfullscreen></iframe>
+              <div class = "embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9a9LWTcLri4?rel=0" allowfullscreen></iframe>
+            </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#videos-carousel" role="button" data-slide="prev">
@@ -260,7 +268,7 @@
             </div>
           </div>
         <div class="col-md-4 col-sm-6 member-item">
-            <a class="member-link" href="audition/">
+            <a class="member-link" href="audition/index.html">
               <div class="member-hover">
                 <img class="img-fluid" src="img/members/new_member_3.jpg" alt="">
               </div>
@@ -271,7 +279,7 @@
             </div>
           </div>
         <div class="col-md-4 col-sm-6 member-item">
-            <a class="member-link" href="audition/">
+            <a class="member-link" href="audition/index.html">
               <div class="member-hover">
                 <img class="img-fluid" src="img/members/new_member_4.jpg" alt="">
               </div>
@@ -284,7 +292,7 @@
         </div>
       </div>
       <div class="col-lg-12 text-center">
-      <p class="text-muted center"> Click <a href="alumni/">here</a> to see our alumni. </p>
+      <p class="text-muted center"> Click <a href="alumni/index.html">here</a> to see our alumni. </p>
       </div>
 
     </section>
