--- a/contact/index.html
+++ b/contact/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet" type 'text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="../css/agency.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
 
   </head>
 
@@ -28,7 +28,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
 	  <div class="container">
-	  <a href="../">
+	  <a href="../index.html">
 	    <img src="../img/DecadenceLogo.png" style="width:20%"></img>
 	  </a>
 	  </div>
@@ -68,12 +68,12 @@
 
 	<!-- Repertoire -->
     <section class="bg-light" id="repertoire">
-      <div class="container text-center" >
+      <div class="container-fluid text-center">
         <div class="row">
           <div class="col-lg-12">
             <h2 class="section-heading text-uppercase">Current Repertoire</h2>
           </div>
-          <p style="display:inline-block;width:100%;">
+          <p style="display:inline;margin: 0 15%">
 			Have any special requests for us? Here is our current repertoire for your perusal!
 			Please remember that this is dependent on the availability of certain members.
 			Also, some of our songs contain explicit lyrics -- if you are contacting us for a
@@ -84,7 +84,7 @@
         </div>
       	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		  <div class="row">
-			<table class="table table-striped table-hover" cellspacing="0" width="100%">
+			<table class="table table-striped table-hover" cellspacing="0" width="auto" style = "align-self:center">
 			  <thead>
 				<tr>
 				  <th scope="col">Song</th>
@@ -109,8 +109,8 @@
 				  <td>-</td>
 				</tr>
 				<tr>
-				  <th scope="row">Sir Duke*</th>
-				  <td>Steview Wonder</td>
+				  <th scope="row">Sir Duke</th>
+				  <td>Stevie Wonder</td>
 				  <td>Jessica Wang</td>
 				</tr>
 				<tr>
@@ -198,7 +198,7 @@
 	<script src="../js/bootstrap.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="../js/agency.min.js"></script>
+    <script src="../js/main.min.js"></script>
 
   </body>
 
