--- a/repertoire/index.html
+++ b/repertoire/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet" type 'text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="../css/agency.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
 
   </head>
 
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a href="../">
+        <a href="../index.html">
           <img src="../img/DecadenceLogo.png" style="width:20%"></img>
         </a>
       </div>
@@ -170,7 +170,7 @@
 	<script src="../js/bootstrap.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="../js/agency.min.js"></script>
+    <script src="../js/main.min.js"></script>
 
   </body>
 
