Update for mobile

--- a/audition/index.html
+++ b/audition/index.html
@@ -44,10 +44,10 @@
     <section id="audition">
       <div class="container text-center" >
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-12">
             <h2 class="section-heading text-uppercase">Come Audition For Us!</h2>
           </div>
-          <div class="col-lg-12">
+          <div class="col-12">
             <h3 class="text-uppercase" style="padding-bottom:15px">Being in DeCadence</h3>
           </div>
           <p style="display:inline-block;width:100%;">
@@ -83,9 +83,9 @@
           </div>
 
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="col-12">
         <div class="row">
-          <table class="table table-striped" cellspacing="0" width="100%">
+          <table class="table table-striped">
             <thead>
             </thead>
             <tbody>
